# ClassRoomExamples

./: .gitignore  README.md
COCC/Programming/20171115/: first.c  last.c  please.run
COCC/Programming/20171116/: Problem01.cpp  Problem02.cpp  Problem02_2.cpp  Problem03.cpp  Problem05.cpp  Problem06.cpp  Problem09.cpp  Problem10.cpp  Problem11.cpp
COCC/Programming/20171117/: Problem01.cpp  Problem01_2.cpp  Problem05.cpp
COCC/Programming/20171118/: Problem01.cpp  Problem02.cpp  Problem02_2.cpp  Problem03.cpp  Problem03_2.cpp  Problem04.cpp
COCC/Programming/20171119/: Problem01.cpp  Problem01_2.cpp  Problem01_3.cpp  Problem01_5.cpp  Problem02.cpp
FHWN/DB/2025_09_18_Introduction/: notes.md
FHWN/DB/2025_09_26_ER_model_DDL/: ER.odg
FHWN/DB/2025_10_03_Test_DQL_Views/: DQL_DDL.md  test.md  test_erd.odg
FHWN/DB/2025_10_17_NF_DML/: DML.md  F1_attributes.odg  Normalize.md  results_1980.db  results_1980_2NF.db  results_1980_3NF.db  results_1980_3NF_driver_id.db  results_1980_3NF_driver_id_enums.db
FHWN/DB/2025_10_31_Getting_rusty/: notes.md
MaTe/2022_06_22_GA_Logifaces/: logiface.py  solvers.py
Misc/RPG_projekt/: 00_Procedural.md  01_OO_init.md  02_Inheritance_TUI_MV.md  03_GUI.md  04_Final.md  ___Prologue.md
SOE/BevProg/: cheat_sheat.md  cheat_sheet.md
SZE/OODB/kyberszittya/Rec1/easy/triangle_area_calculator/: CMakeLists.txt
SZE/OODB/kyberszittya/Rec1/easy/triangle_area_calculator/src/: main.cpp  main_file.cpp  triangle.cpp  triangle.h
SZE/OODB/kyberszittya/Rec1/easy/triangle_area_calculator/test/: test_triangle.cpp
SZE/Programozas_EFOP/: main.cpp
(+3697 files in other folders)
